--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -10,5 +10,30 @@
         android:id="@+id/container_rl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <FrameLayout
+        android:id="@+id/video_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+        <com.wilddog.video.WilddogVideoView
+            android:id="@+id/remote_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <com.wilddog.video.WilddogVideoView
+            android:id="@+id/local_view"
+            android:layout_width="120dp"
+            android:layout_height="180dp"
+            android:layout_gravity="bottom|left"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="25dp"/>
+        <ImageView
+            android:id="@+id/hung_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/hung_up"
+            android:layout_gravity="bottom|right"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="20dp"/>
+    </FrameLayout>
 
 </FrameLayout>
