--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.zd.wilddogdemo.UserActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/container_rl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <FrameLayout
+        android:id="@+id/video_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
         <com.wilddog.video.WilddogVideoView
             android:id="@+id/remote_view"
             android:layout_width="match_parent"
@@ -25,5 +34,6 @@
             android:layout_gravity="bottom|right"
             android:layout_marginBottom="10dp"
             android:layout_marginRight="20dp"/>
+    </FrameLayout>
 
 </FrameLayout>
