--- a/app/src/main/res/layout/activity_dial.xml
+++ b/app/src/main/res/layout/activity_dial.xml
@@ -3,7 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/bg"
-             tools:context="com.zd.wilddogdemo.ui.DialActivity">
+             tools:context="com.zd.wilddogdemo.ui.user.DialActivity">
 
     <FrameLayout
         android:id="@+id/video_layout"
@@ -50,24 +50,19 @@
                 android:layout_marginTop="10dp"
                 android:text="董先生"/>
         </LinearLayout>
-
-        <LinearLayout
+        <ProgressBar
+            android:id="@+id/dialing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginBottom="50dp">
-            <ImageView
-                android:id="@+id/ring_up"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ring_up"/>
-            <ImageView
-                android:id="@+id/close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="100dp"
-                android:src="@drawable/hung_up"/>
-        </LinearLayout>
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center"/>
+        <ImageView
+            android:id="@+id/close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="50dp"
+            android:clickable="true"
+            android:src="@drawable/hung_up"/>
     </FrameLayout>
 </FrameLayout>
