--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.zd.wilddogdemo.ui.MainActivity">
+    tools:context="com.zd.wilddogdemo.ui.user.MainActivity">
 
     <com.zd.wilddogdemo.ui.View.NoSlidingViewPaper
         android:id="@+id/content"
