--- a/app/src/main/res/layout/fragment_about_me.xml
+++ b/app/src/main/res/layout/fragment_about_me.xml
@@ -1,73 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:paddingBottom="16dp"
+              android:paddingEnd="16dp"
+              android:paddingStart="16dp"
+              android:paddingTop="16dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp">
+        android:paddingBottom="20dp"
+        android:paddingTop="10dp">
+
         <ImageView
             android:id="@+id/head_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="30dp"
             android:src="@drawable/head"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/head_iv"
-            android:orientation="vertical"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp">
+            android:layout_marginLeft="15dp"
+            android:layout_toRightOf="@id/head_iv"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/nick_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="start"
-                android:textSize="16sp"
-                android:text="董先生"/>
+                android:text="董先生"
+                android:textSize="16sp"/>
+
             <TextView
                 android:id="@+id/balance_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:gravity="start"
-                android:textSize="12sp"
-                android:text="余额：20元"/>
+                android:text="余额：20元"
+                android:textSize="12sp"/>
         </LinearLayout>
     </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="#eeeeee"/>
-    <RelativeLayout
-        android:id="@+id/conversation_history"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_centerVertical="true"
-            android:textSize="16sp"
-            android:text="通话历史"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/entry"/>
-    </RelativeLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#eeeeee"/>
+
+    <TextView
+        android:id="@+id/video_resolution"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:drawableEnd="@drawable/entry"
+        android:gravity="center_vertical"
+        android:paddingEnd="10dp"
+        android:paddingStart="20dp"
+        android:text="视频通话分辨率:\t480p"
+        android:textSize="14sp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#eeeeee"/>
+
+    <TextView
+        android:id="@+id/conversation_record"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:drawableEnd="@drawable/entry"
+        android:gravity="center_vertical"
+        android:paddingEnd="10dp"
+        android:paddingStart="20dp"
+        android:text="视频通话记录"
+        android:textSize="14sp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#eeeeee"/>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -78,9 +96,9 @@
         style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="16dp"
         android:text="@string/logout"
         android:textStyle="bold"/>
 
