--- a/app/src/main/res/layout/activity_dial.xml
+++ b/app/src/main/res/layout/activity_dial.xml
@@ -50,10 +50,10 @@
                 android:layout_marginTop="10dp"
                 android:text="董先生"/>
         </LinearLayout>
-        <ProgressBar
+        <com.qmuiteam.qmui.widget.QMUILoadingView
             android:id="@+id/dialing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginTop="30dp"
             android:layout_gravity="center"/>
         <ImageView
