--- a/app/src/main/res/layout/activity_doctor_info.xml
+++ b/app/src/main/res/layout/activity_doctor_info.xml
@@ -1,121 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    tools:context="com.zd.wilddogdemo.ui.doctor.DoctorActivity">
-    <RelativeLayout
-        android:layout_width="match_parent"
+    android:paddingBottom="16dp"
+    android:paddingEnd="16dp"
+    android:paddingStart="16dp"
+    android:paddingTop="16dp">
+
+    <ImageView
+        android:id="@+id/head_iv"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp">
-        <ImageView
-            android:id="@+id/head_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/head"/>
-            <TextView
-                android:id="@+id/nick_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/head_iv"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="15dp"
-                android:textSize="16sp"
-                android:text="黄医师"/>
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#eeeeee"/>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="视频通话价格:(元/分钟)"
-            />
-        <TextView
-            android:id="@+id/video_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="25dp"
-            android:text="20元"/>
-    </FrameLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#eeeeee"/>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="视频通话总数:(次)"
-            />
-        <TextView
-            android:id="@+id/video_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="25dp"
-            android:text="20次"/>
-    </FrameLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#eeeeee"/>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:text="被收藏数:(次)"
-            />
-        <TextView
-            android:id="@+id/follow_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
-            android:layout_marginEnd="25dp"
-            android:text="20次"/>
-    </FrameLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#eeeeee"/>
-    <View
-        android:layout_width="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="14dp"
+        android:src="@drawable/head"/>
+
+    <TextView
+        android:id="@+id/nick_name"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        app:layout_constraintTop_toTopOf="@+id/head_iv"
+        app:layout_constraintBottom_toBottomOf="@+id/head_iv"
+        app:layout_constraintLeft_toRightOf="@+id/head_iv"
+        android:gravity="center"
+        android:layout_marginStart="15dp"
+        android:text="黄医师"
+        android:textSize="16sp"/>
+
+    <View
+        android:id="@+id/line1"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/head_iv"
+        android:layout_marginTop="5dp"
+        android:background="#eeeeee"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/video_price"
+        app:layout_constraintTop_toBottomOf="@+id/line1"
+        android:layout_marginStart="20dp"
+        android:gravity="center_vertical"
+        android:text="视频通话价格:(元/分钟)"
+        />
+
+    <TextView
+        android:id="@+id/video_price"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line1"
+        android:layout_marginEnd="10dp"
+        android:gravity="center_vertical|end"
+        android:text="20元"/>
+
+    <View
+        android:id="@+id/line2"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/video_price"
+        android:background="#eeeeee"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/video_count"
+        app:layout_constraintTop_toBottomOf="@+id/line2"
+        android:layout_marginStart="20dp"
+        android:gravity="center_vertical"
+        android:text="视频通话总数:(次)"
+        />
+
+    <TextView
+        android:id="@+id/video_count"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line2"
+        android:layout_marginEnd="10dp"
+        android:gravity="center_vertical|end"
+        android:text="20次"/>
+
+    <View
+        android:id="@+id/line3"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/video_count"
+        android:background="#eeeeee"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/follow_count"
+        app:layout_constraintTop_toBottomOf="@+id/line3"
+        android:layout_marginStart="20dp"
+        android:gravity="center_vertical"
+        android:text="被收藏数:(次)"/>
+
+    <TextView
+        android:id="@+id/follow_count"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line3"
+        android:layout_marginEnd="10dp"
+        android:gravity="center_vertical|end"
+        android:text="20次"/>
+
+    <View
+        android:id="@+id/line4"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/follow_count"
+        android:background="#eeeeee"/>
 
     <Button
         android:id="@+id/dial"
         style="?android:textAppearanceSmall"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginBottom="16dp"
         android:text="@string/dial"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
