--- a/app/src/main/res/layout/fragment_about_me.xml
+++ b/app/src/main/res/layout/fragment_about_me.xml
@@ -1,106 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:paddingBottom="16dp"
-              android:paddingEnd="16dp"
-              android:paddingStart="16dp"
-              android:paddingTop="16dp">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             android:paddingBottom="16dp"
+                                             android:paddingEnd="16dp"
+                                             android:paddingStart="16dp"
+                                             android:paddingTop="16dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+
+    <ImageView
+        android:id="@+id/head_iv"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp">
+        android:layout_marginStart="30dp"
+        android:src="@drawable/head"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <ImageView
-            android:id="@+id/head_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="30dp"
-            android:src="@drawable/head"/>
+    <TextView
+        android:id="@+id/nick_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:text="董先生"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toRightOf="@+id/head_iv"
+        app:layout_constraintTop_toTopOf="@+id/head_iv"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="15dp"
-            android:layout_toEndOf="@id/head_iv"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/nick_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:text="董先生"
-                android:textSize="16sp"/>
-
-            <TextView
-                android:id="@+id/balance_account"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="start"
-                android:text="余额：20元"
-                android:textSize="12sp"/>
-        </LinearLayout>
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/balance_account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="45dp"
+        android:layout_marginStart="20dp"
+        android:text="余额：20元"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@+id/head_iv"
+        app:layout_constraintLeft_toRightOf="@+id/head_iv"/>
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="#eeeeee"/>
+        android:layout_marginTop="5dp"
+        android:background="#eeeeee"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/head_iv"/>
 
     <TextView
         android:id="@+id/video_resolution"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="40dp"
+        android:layout_marginTop="6dp"
         android:drawableEnd="@drawable/entry"
         android:gravity="center_vertical"
         android:paddingEnd="10dp"
         android:paddingStart="20dp"
         android:text="视频通话分辨率:\t480p"
-        android:textSize="14sp"/>
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/head_iv"/>
+
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="1dp"
-        android:background="#eeeeee"/>
-
-    <TextView
-        android:id="@+id/conversation_record"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:drawableEnd="@drawable/entry"
-        android:gravity="center_vertical"
-        android:paddingEnd="10dp"
-        android:paddingStart="20dp"
-        android:text="视频通话记录"
-        android:textSize="14sp"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#eeeeee"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:background="#eeeeee"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/video_resolution"/>
 
     <Button
         android:id="@+id/logout_button"
         style="?android:textAppearanceSmall"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="16dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:text="@string/logout"
         android:textStyle="bold"/>
 
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
