--- a/app/src/main/res/layout/item_video_call_history.xml
+++ b/app/src/main/res/layout/item_video_call_history.xml
@@ -1,52 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             android:id="@+id/container"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/avatar_iv"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_centerVertical="true"
-        android:src="@drawable/head"/>
+        android:src="@drawable/head"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/nick_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_marginStart="10dp"
-        android:layout_toEndOf="@id/avatar_iv"
-        android:orientation="vertical">
+        android:layout_marginTop="7dp"
+        android:text="医生"
+        app:layout_constraintLeft_toRightOf="@+id/avatar_iv"
+        app:layout_constraintTop_toTopOf="@+id/avatar_iv"/>
 
-        <TextView
-            android:id="@+id/nick_name_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="医生"/>
+    <TextView
+        android:id="@+id/conversation_time_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="7dp"
+        android:layout_marginStart="10dp"
+        android:text="通话时长：5分钟"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@+id/avatar_iv"
+        app:layout_constraintLeft_toRightOf="@+id/avatar_iv"/>
 
-        <TextView
-            android:id="@+id/conversation_time_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textSize="10sp"
-            android:text="通话时长：5分钟"/>
-    </LinearLayout>
     <TextView
         android:id="@+id/conversation_start_tv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:text="2017/9/15 20:18:45"/>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#eeeeee"
-        android:layout_marginTop="5dp"
-        android:layout_alignParentBottom="true"/>
+        android:layout_height="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
+        android:text="2017/9/15 20:18"/>
 
-</RelativeLayout>
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/avatar_iv"
+        android:layout_marginTop="5dp"
+        android:background="#eeeeee"/>
+
+</android.support.constraint.ConstraintLayout>
